@@ -8,7 +8,7 @@ includedir=@INCLUDEDIR@
 
 Name: lz4
 Description: fast lossless compression algorithm library
-URL: http://code.google.com/p/lz4/
+URL: http://lz4.org/
 Version: @VERSION@
 Libs: -L@LIBDIR@ -llz4
 Cflags: -I@INCLUDEDIR@
