@@ -1,6 +1,6 @@
 \"
 \" lz4.1: This is a manual page for 'lz4' program. This file is part of the
-\" lz4 <https://code.google.com/p/lz4/> project.
+\" lz4 <http://www.lz4.org/> project.
 \" Author: Yann Collet
 \"
 
@@ -215,7 +215,7 @@ This is default behavior anyway, so this option is just for compatibility with g
  iteration loops [1-9](default : 3), benchmark mode only
 
 .SH BUGS
-Report bugs at: https://github.com/Cyan4973/lz4
+Report bugs at: https://github.com/Cyan4973/lz4/issues
 
 .SH AUTHOR
 Yann Collet
